--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^3.13.1
+  firebase_auth: ^5.5.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -77,6 +79,26 @@ flutter:
     - assets/images/volume.jpeg
     - assets/images/std.jpeg
     - assets/images/percent.jpeg
+    - assets/images/support.jpeg
+    - assets/images/break.jpeg
+    - assets/images/false.jpeg
+    - assets/images/resistance.jpeg
+    - assets/images/rising.jpeg
+    - assets/images/mat.jpeg
+    - assets/images/bearish.jpeg
+    - assets/images/dark.jpeg
+    - assets/images/shooting.jpeg
+    - assets/images/spinning.jpeg
+    - assets/images/tasuki.jpeg
+    - assets/images/doji.jpeg
+    - assets/images/thrusting.jpeg
+    - assets/images/falling.jpeg
+    - assets/images/sandr.jpeg
+    - assets/images/bullisheng.jpeg
+    - assets/images/hammer.jpeg
+    - assets/images/highwave.jpeg
+    - assets/images/pline.jpeg
+    - assets/images/seperating.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
